syntax = "proto3";

package productReader;

option go_package = "./;productReader";

import "product_reader_messages.proto";


service readerService {
  rpc CreateProduct(CreateProductReq) returns (CreateProductRes);
  rpc GetProductById(GetProductByIdReq) returns (GetProductByIdRes);
}